# serde-automerge

./: Cargo.toml  README.md  release.toml
src/: de.rs  error.rs  lib.rs  main.rs  ser.rs
src/de/: error.rs  map.rs  mod.rs  scalar.rs  seq.rs  value.rs
src/ser/: error.rs  key.rs  map.rs  mod.rs  seq.rs
tests/: updates.rs
