[package]
name = "serde-automerge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = { git = "https://github.com/tosti007/automerge-rs/", rev = "3a432e3" }
serde = "1"
thiserror = "1.0.32"
