[package]
name = "serde-automerge"
version = "0.1.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/serde-automerge"
description = "(De)serialize `serde` objects from or into `automerge` transactions"
include = ["src", "LICENSE", "CONTRIBUTING.md"]

[dependencies]
automerge = "0.5"
serde = "1"
thiserror = "1.0.32"
